--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  firebase_auth: ^0.6.2+1
+  firebase_core: ^0.2.5+1
+
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  google_sign_in: ^3.0.4
 
 flutter:
   uses-material-design: true
